<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bui"
        android:scaleType="center"


        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                />

            <RadioGroup
                android:id="@+id/group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="vertical"


                >

                <CheckBox
                    android:id="@+id/option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked1"
                    android:text="@string/option11"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked1"
                    android:text="@string/option12"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked1"
                    android:text="@string/option13"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question2"
                android:textSize="25sp"
                />


                <CheckBox
                    android:id="@+id/option_21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked2"
                    android:text="@string/option21"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked2"
                    android:text="@string/option22"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked2"
                    android:text="@string/option23"
                    android:textSize="20sp" />

            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/question3"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/option_31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked3"
                    android:text="@string/option31"
                    android:textSize="20sp"

                    />

                <CheckBox
                    android:id="@+id/option_32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked3"
                    android:text="@string/option32"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked3"
                    android:text="@string/option33"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question4"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/group4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/option_41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked4"
                    android:text="@string/option41"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked4"
                    android:text="@string/option42"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked4"
                    android:text="@string/option43"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question5"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/group5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/option_51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked5"
                    android:text="@string/option51"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked5"
                    android:text="@string/option52"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked5"
                    android:text="@string/option53"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question6"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/group6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/option_61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked6"
                    android:text="@string/option61"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked6"
                    android:text="@string/option62"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/option_63"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked6"
                    android:text="@string/option63"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_7"
                android:text="@string/question7"/>
            <EditText
                android:id="@+id/edit_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Submit"
                android:text="Submit"

                />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>


